--- a/index.html
+++ b/index.html
@@ -26,13 +26,19 @@
 
     <br>
     <hr>
-    <form id="effect-to-ingreds-json-form">
-        <h3>Input {"Restore Fatigue": ["Saltrice", ...], ...} JSON</h3>
+    <form id="ingred-to-effects-json-form">
+        <h4>
+            Input Ingredient -> [Effects] JSON
+            <h5>{"Saltrice": ["Restore Fatigue", ...], ...}</h5>
+        </h4>
         <textarea></textarea>
         <button>Submit</button>
     </form>
-    <form id="ingred-to-effects-json-form">
-        <h3>Input {"Saltrice": ["Restore Fatigue", ...], ...} JSON</h3>
+    <form id="effect-to-ingreds-json-form">
+        <h4>
+            Input Effect -> [Ingredients] JSON
+            <h5>{"Restore Fatigue": ["Saltrice", ...], ...}</h5>
+        </h4>
         <textarea></textarea>
         <button>Submit</button>
     </form>
